# scavengerminer

./: .gitignore  Cargo.toml  flake.nix  readme.md  run.sh  upgrade.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
src/: accounting.rs  dashboard.rs  donations.rs  main.rs
src/address/: dev.rs  mod.rs  prefill.rs  shelley.rs
src/api/: client.rs  mod.rs  types.rs
src/mining/: blakehash.rs  mod.rs  stats.rs  worker.rs
src/util/: bech.rs  cip8.rs  mod.rs
