[package]
name = "scavenger-miner"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "fs"
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake2 = "0.10"
bech32 = "0.9"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
ciborium = { version = "0.2", features = ["std"] }
ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize", package = "ashmaize" }
crossterm = "0.27"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"